# entity_resolution

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
src/: README.md  __init__.py
src/entity_resolution/: __init__.py  entity_assignment.py  entity_resolution.py  example_usage.py  run_tests.py  workflow.py
tests/: __init__.py  run_all_tests.py  test_entity_assignment.py  test_entity_resolution.py  test_workflow.py
