[metadata]
name = entity-resolution
version = 1.0.0
author = Zachary King
author_email = contact@entity-resolution.com
description = Intelligent column matching using LLMs and fuzzy matching for entity resolution
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/zacharyking/entity-resolution
project_urls =
    Bug Reports = https://github.com/zacharyking/entity-resolution/issues
    Source = https://github.com/zacharyking/entity-resolution
    Documentation = https://github.com/zacharyking/entity-resolution/blob/main/README.md
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Data Analysts
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Database
    Topic :: Software Development :: Libraries :: Python Modules
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Operating System :: OS Independent
    Framework :: Jupyter
    Natural Language :: English

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    langchain>=0.1.0
    fuzzywuzzy>=0.18.0
    pandas>=2.0.0
    openai>=1.0.0
    python-levenshtein>=0.12.2
include_package_data = True
zip_safe = False

[options.packages.find]
where = src

[options.package_data]
entity_resolution = *.md, *.txt

[options.extras_require]
dev =
    pytest>=7.0.0
    pytest-cov>=4.0.0
    black>=22.0.0
    flake8>=5.0.0
    mypy>=1.0.0
    pre-commit>=2.20.0
test =
    pytest>=7.0.0
    pytest-cov>=4.0.0
    unittest-xml-reporting>=3.2.0
docs =
    sphinx>=5.0.0
    sphinx-rtd-theme>=1.0.0
    myst-parser>=0.18.0
notebook =
    jupyter>=1.0.0
    ipykernel>=6.0.0
    matplotlib>=3.5.0
    seaborn>=0.11.0

[options.entry_points]
console_scripts =
    entity-resolution-demo = entity_resolution.example_usage:main
    entity-resolution-test = entity_resolution.run_tests:main

# Flake8 configuration
[flake8]
max-line-length = 88
max-complexity = 10
extend-ignore = E203, E266, E501, W503
select = B,C,E,F,W,T4,B9
exclude =
    .git,
    __pycache__,
    .pytest_cache,
    .coverage,
    *.egg-info,
    build,
    dist,
    .venv,
    venv,
    env

# Coverage configuration
[coverage:run]
source = src/entity_resolution
omit =
    */tests/*
    */test_*
    setup.py

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    if self.debug:
    if settings.DEBUG
    raise AssertionError
    raise NotImplementedError
    if 0:
    if __name__ == .__main__.:

# Tool configuration for setuptools
[bdist_wheel]
universal = 0

[egg_info]
tag_build = 
tag_date = 0
